--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
                 <label for="caesar">Caesar cipher</label>
                 <input type="radio" name="cipher" id= "vigenere">
                 <label for="vigenere">Vigenere cipher</label>
-                <input type="radio" name="cipher" id="vernam">
-                <label for="vernam">Vernam cipher</label>  
             </div>
             <div id="textareaDiv">
                 <label for="text">Message to encrypt/decrypt</label> <br>
                 <textarea name="text" id="textarea"></textarea>
             </div>
             <div id="submitDiv">
-                <input type="submit" id="encryptBtn" value="Encrypt" onclick="Encrypt()">
+                <input type="submit" id="encryptBtn" value="Encrypt">
                 <input type="submit" id="decryptBtn" value="Decrypt">
             </div>
         </form>
