Add caesar cipher encrypt and background image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <textarea name="text" id="textarea"></textarea>
             </div>
             <div id="submitDiv">
-                <input type="submit" id="encryptBtn" value="Encrypt">
+                <input type="submit" id="encryptBtn" value="Encrypt" onclick="typeOfEncrypt()">
                 <input type="submit" id="decryptBtn" value="Decrypt">
             </div>
         </form>
