Add Caesar decryption and fix bug in encryption

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div id="submitDiv">
                 <input type="submit" id="encryptBtn" value="Encrypt" onclick="typeOfEncrypt()">
-                <input type="submit" id="decryptBtn" value="Decrypt">
+                <input type="submit" id="decryptBtn" value="Decrypt" onclick="typeOfDecrypt()">
             </div>
         </form>
     </div>
